1998-07-22  Jochen Wiedmann  <joe@laptop.ispsoft.de>

	* sql_yacc.y: Added -DMSDOS under WIN32, so that malloc.h
	  gets included.
	* lib/SQL/Statement.pm (UPDATE): Fixed $val->Num() to
	  $val->num(). My thanks to Gerald Richter, <richter@ecos.de>.
	* sql_yacc.y: Replaced isalnum with isalnum_, as isalnum('_') = 0.
	  Pointed out by Gerald Richter, <richter@ecos.de>.

1998-06-25  Jochen Wiedmann  <joe@ispsoft.de> (0.1003)

	* lib/SQL/Statement.pm: Fixed bug in "ORDER BY" with numeric
	  columns. Removed misc.files_as_tables feature.

1998-05-20  Jochen Wiedmann  <joe@ispsoft.de> (0.1002)

	* Added misc.files_as_tables feature

1998-05-14  Jochen Wiedmann  <joe@ispsoft.de> (0.1001)

	* Initial version
