@@ -1,4 +1,3 @@
-
 #include "sql_data.h"
 #include "sql_yacc.h"
 #include <stdlib.h>
